[v7.0] Fix data races in UserAcquisitionStats class in 7.0

XMLWordPrintableJSON

    • Server Security
    • Fully Compatible
    • v7.0
    • Security 2025-03-31, Server Security 2025-04-14, Server Security 2025-04-28, Server Security 2025-08-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      See the linked Coverity tickets for the locations where data race conditions occur within the UserAcquisitionStats class

            Assignee:
            Erwin Pe
            Reporter:
            Erwin Pe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: