SERVER-102483 Fix data races in UserAcquisitionStats class in 7.0 (#33659)

GitOrigin-RevId: 1708ee19da125e52ec4feb139ee3c3eb30f42494